Fixed background for index mobile, fixed example facts blocks stretching for mobile

--- a/source/sass/index/_example.scss
+++ b/source/sass/index/_example.scss
@@ -93,7 +93,7 @@
 
 .example__facts {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -105,7 +105,7 @@
 }
 
 .example__fact {
-  width: calc(50% - 16px);
+  width: 124px;
   position: relative;
   margin: 0;
   padding: 0;
@@ -115,6 +115,8 @@
   }
 
   &:first-child {
+    margin-right: 32px;
+
     @media (min-width: $tablet-width) {
       margin-right: 41px;
     }
