--- a/source/sass/index/_slogan.scss
+++ b/source/sass/index/_slogan.scss
@@ -9,16 +9,18 @@ $color: #ffffff;
   padding-right: $mobile-padding;
   padding-bottom: 22px;
   background-image: url("../img/index-can-mobile@1x.png"),
-    url("../img/index-background-mobile@1x.jpg");
-  background-size: 280px auto, 320px auto;
-  background-position: center 168px, center top;
+    url("../img/index-background-mobile@1x.jpg"),
+    linear-gradient(to bottom, $cat-green 305px, $white 305px);
+  background-size: 280px auto, 320px auto, 100% auto;
+  background-position: center 168px, center top, center;
   background-repeat: no-repeat, no-repeat;
-  background-color: $color; // color and bg-color are same. possible issues if bg-image won't download.
+  background-color: $color;
   text-align: center;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/index-can-mobile@2x.png"),
-      url("../img/index-background-mobile@2x.jpg");
+      url("../img/index-background-mobile@2x.jpg"),
+      linear-gradient(to bottom, $cat-green 305px, $white 305px);
   }
 
   @media (min-width: $tablet-width) {
